<refactor> [step2] getLast 메소드로 value 가져오도록 자료구조 변경 ArrayList -> LinkedList